--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
   <body>
     <div id="header">
       #1 Platform to discorvers newest performers
-      <table>
-        <tr><td>Total Votes</td><td>Total Performes<tr>
+      <table id="votesnlisting">
+        <tr><td>Total Votes</td><td>Total Performes</td><tr>
       </table>
     </div>
     <div id="header2">
+      <div id="left">
+          <table id="newlisting">
+            <tr><td>New Performers</td><td> > more</td><tr>
+            <tr><td>Moana Pozzi</td><td>X minutes ago</td><tr>
+            <tr><td>Cicciolina</td><td>X minutes ago</td><tr>
+            <tr><td>Mia Khalifa</td><td>X minutes ago</td><tr>  
+          </table>
+      </div>
+      <div id="middle">
+          <table id="trandingperformers">
+            <tr><td>New Performers</td><tr>
+            <tr><td>Moana Pozzi</td><tr>
+            <tr><td>Cicciolina</td><tr>
+            <tr><td>Mia Khalifa</td><tr>  
+          </table>
+      </div>
+      <div id="right">
+           <table id="servicesale">
+            <tr><td>Service Sale</td><td> > more</td><tr>
+            <tr><td>Moana Pozzi</td><td>OnlyFans</td><tr>
+            <tr><td>Cicciolina</td><td>SnapChat</td><tr>
+            <tr><td>Mia Khalifa</td><td>Telegram</td><tr>  
+          </table>
+      </div>
     </div>
     <div id="bodyp1">
     </div>
