--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       </div>
     </div>
     <div id="bodyp1">
+        <table>
+          <tr><td>Rank</td><td>Coin</td><td>Category</td><td>Platform</td><td>24h votes</td><td>Followers</td><td>Price</td><td>Subscriptio</td><td>Total Votes</td></tr>
+        </table>
     </div>
     <div id="bodyp2">
     </div>
