--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         </table>
     </div>
     <div id="bodyp2">
+        <table>
+          <tr><td>Todays's Best</td><td>All Time Best</td><tr>
+        </table>
+        <table>
+         <tr><td>Rank</td><td>Coin</td><td>Category</td><td>Platform</td><td>24h votes</td><td>Followers</td><td>Price</td><td>Subscriptio</td><td>Total Votes</td></tr>
+        </table>
     </div>
     <div id="bodyp3">
     </div>
