--- a/index.html
+++ b/index.html
@@ -2,6 +2,37 @@
   <head>
     <title></title>
   </head>
+  <style>
+    header{
+    width:100%;
+    height: 15%;
+    background: lightblue;
+    }
+    header2{
+    width:100%;
+    height: 30%;  
+    background: lightblue;  
+    }
+    midlle{
+    width:100%;
+    height: 60%;  
+    background: lightblue;
+    }
+    bodyp2{
+    width:100%;
+    height: 80%;  
+    background: lightblue;
+    }
+    bodyp2{
+    width:100%;
+    height: 80%;  
+    background: lightblue;
+    }
+    footer{
+    width:100%;
+    background: lightblue;
+    }
+  </style>
   <body>
     <div id="header">
       #1 Platform to discorvers newest performers
