--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
     <title></title>
   </head>
   <style>
-    header{
+    #header{
     width:100%;
     height: 15%;
     background: lightblue;
     }
-    header2{
+    #header2{
     width:100%;
     height: 30%;  
     background: lightblue;  
     }
-    midlle{
+    #midlle{
     width:100%;
     height: 60%;  
     background: lightblue;
     }
-    bodyp2{
+    #bodyp2{
     width:100%;
     height: 80%;  
     background: lightblue;
     }
-    bodyp2{
+    #bodyp2{
     width:100%;
     height: 80%;  
     background: lightblue;
     }
-    footer{
+    #footer{
     width:100%;
     background: lightblue;
     }
