--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
     width:100%;
     background: lightblue;
     }
+    #right{
+    float:left;
+    }
+    #middle{
+    float:left;
+    }
+    #left{
+    float:left;
+    }
   </style>
   <body>
     <div id="header">
