--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   </style>
   <body>
     <div id="header">
+      Qui ci va logo, barra di ricerca, menu, login
+    </div>
+    <div id="header">
       #1 Platform to discorvers newest performers
       <table id="votesnlisting">
         <tr><td>Total Votes</td><td>Total Performes</td><tr>
