--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <title></title>
   </head>
   <style>
+    table, tr, td{
+    border: 1px solid black;
+    border-collapse: collapse;
+    }
     #header{
     width:100%;
     height: 15%;
