--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     border: 1px solid black;
     border-collapse: collapse;
     }
+    #header0{
+    width:100%;
+    height: 15%;  
+    background: lightblue;
+    }
     #header{
     width:100%;
     height: 15%;
-    background: lightblue;
+    background: #020109;
     }
     #header2{
     width:100%;
     height: 30%;  
-    background: lightblue;  
+    background: #020109;  
     }
     #midlle{
     width:100%;
@@ -47,7 +52,7 @@
     }
   </style>
   <body>
-    <div id="header">
+    <div id="header0">
       Qui ci va logo, barra di ricerca, menu, login
     </div>
     <div id="header">
