--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title></title>
   </head>
   <style>
+    body{
+    color: white;
+    }
     table, tr, td{
     border: 1px solid black;
     border-collapse: collapse;
