--- a/index.html
+++ b/index.html
@@ -18,31 +18,28 @@
     #header{
     width:100%;
     height: 15%;
-    background: lightblue;
+    background: url(http://pilerats.com/assets/Uploads/cam-girls-article.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
     }
     #header2{
     width:100%;
     height: 30%;  
-    background: lightblue;  
-    }
-    #midlle{
-    width:100%;
-    height: 60%;  
-    background: lightblue;
+    background: #020109;  
     }
     #bodyp1{
     width:100%;
     height: 80%;  
-    background: lightblue;
+    background: #020101;
     }
     #bodyp2{
     width:100%;
     height: 80%;  
-    background: lightblue;
+    background: #020109;
     }
     #footer{
     width:100%;
-    background: lightblue;
+    background: #000000;
     }
     #right{
     float:left;
