--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     color: white;
     }
     table, tr, td{
-    border: 1px solid black;
+    border: 1px solid gray;
     border-collapse: collapse;
     }
     #header0{
