--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     table, tr, td{
     border: 1px solid gray;
     border-collapse: collapse;
+    padding: 5%;
     }
     #header0{
     width:100%;
