--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     border: 1px solid gray;
     border-collapse: collapse;
     padding: 5%;
+    width: 100%;
     }
     #header0{
     width:100%;
@@ -44,12 +45,18 @@
     }
     #right{
     float:left;
+    width: 25%;
+    margin-left:5%;
     }
     #middle{
     float:left;
+    width: 25%;
+    margin-left:5%;  
     }
     #left{
     float:left;
+    width: 25%;
+    margin-left:5%;
     }
   </style>
   <body>
