--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     body{
     color: white;
     }
-    table, tr, td{
+    table, tr{
     border: 1px solid gray;
     border-collapse: collapse;
     padding: 2%;
     width: 100%;
+    }
+    td{
+    width: auto;
     }
     #header0{
     width:100%;
