--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     body{
     color: white;
     }
-    table, tr{
+    table{
     border: 1px solid gray;
     border-collapse: collapse;
     padding: 2%;
     width: 100%;
     }
-    td{
+    td, tr{
     width: auto;
+    border: 1px solid gray;
     }
     #header0{
     width:100%;
