--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     height: 5%;  
     background: #020109;
     }
+    #votesnlisting{
+    width: 30%;
+    }
     #header{
     width:100%;
     height: 40%;
