--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <div id="middle">
           <table id="trandingperformers">
-            <tr><td>New Performers</td><tr>
+            <tr><td>Tranding Performers</td><tr>
             <tr><td>Moana Pozzi</td><tr>
             <tr><td>Cicciolina</td><tr>
             <tr><td>Mia Khalifa</td><tr>  
